- Added localization support. Included with the addon in the lang folder is the file Deco_en_US.lang, which contains all english translations for the addon. Anyone who wishes to make and distribute translations is free to do so, and I will include it here if you link it.
- Added iron trapdoors, crafted with 4 iron ingots and 2 redstone latches, producing 2. They work just like iron doors and will only respond to redstone signals.
- Added spider eye blocks, created by packing 16 spider eyes together, and spider eye slabs.
- Added the ability for fertilizer to spawn ferns.
- Added the ability for the block dispenser to use fertilizer on grass to spawn flowers. The block dispenser will also not immediately suck up flowers placed using fertilizer (but can still suck up flowers in other circumstances). This, combined with the recipe change below, allows for automated production of flowers and dye.
- Added the lily of the valley as a new type of flower, which can be ground down into 2 white dye.
- Changed grass to not die while in darkness in order to facilitate its decorative use and to prevent ugly dirt under overhangs or dense trees. However, to maintain balance, animals may not eat from grass without sunlight, and the texture updates slightly to reflect this.
- Changed terracotta to break into 8 red sand piles when broken with an iron pick or lower. This and the below change were done for balance with my world gen addon.
- Changed stone variants to drop their loose cobblestone variant when broken with an iron pick or lower.
- Changed (increased) the hardness and blast resistance of terracotta.
- Changed doors to stack to 16.
- Changed trapdoors above ladders to only be climbable if the trapdoor is attached to the same face as the ladder.
- Changed chair collision and selection box to better match the model. I intend to make further changes here, such as to make the back collidable, but that would require some rewrites.