@@ -14,15 +14,15 @@ tile.decoBlockDioriteBrickLoose.name=Loose Diorite Bricks
 tile.decoBlockGraniteStairs.name=Granite Stairs
 tile.decoBlockAndesiteStairs.name=Andesite Stairs
 tile.decoBlockDioriteStairs.name=Diorite Stairs
-tile.decoBlockGraniteStairsSmooth.name=Polished Granite Stairs
-tile.decoBlockAndesiteStairsSmooth.name=Polished Andesite Stairs
-tile.decoBlockDioriteStairsSmooth.name=Polished Diorite Stairs
-tile.decoBlockGraniteStairsCobble.name=Granite Cobblestone Stairs
-tile.decoBlockAndesiteStairsCobble.name=Andesite Cobblestone Stairs
-tile.decoBlockDioriteStairsCobble.name=Diorite Cobblestone Stairs
-tile.decoBlockGraniteStairsBrick.name=Granite Bricks Stairs
-tile.decoBlockAndesiteStairsBrick.name=Andesite Bricks Stairs
-tile.decoBlockDioriteStairsBrick.name=Diorite Bricks Stairs
+tile.decoBlockGraniteSmoothStairs.name=Polished Granite Stairs
+tile.decoBlockAndesiteSmoothStairs.name=Polished Andesite Stairs
+tile.decoBlockDioriteSmoothStairs.name=Polished Diorite Stairs
+tile.decoBlockGraniteCobbleStairs.name=Granite Cobblestone Stairs
+tile.decoBlockAndesiteCobbleStairs.name=Andesite Cobblestone Stairs
+tile.decoBlockDioriteCobbleStairs.name=Diorite Cobblestone Stairs
+tile.decoBlockGraniteBrickStairs.name=Granite Bricks Stairs
+tile.decoBlockAndesiteBrickStairs.name=Andesite Bricks Stairs
+tile.decoBlockDioriteBrickStairs.name=Diorite Bricks Stairs
 tile.decoBlockGraniteCobblestoneStairsLoose.name=Loose Granite Cobblestone Stairs
 tile.decoBlockAndesiteCobblestoneStairsLoose.name=Loose Andesite Cobblestone Stairs
 tile.decoBlockDioriteCobblestoneStairsLoose.name=Loose Diorite Cobblestone Stairs
@@ -36,17 +36,17 @@ tile.decoBlockStoneBrickCrackedStairs.name=Cracked Stone Brick Stairs
 tile.decoBlockRedSand.name=Red Sand
 tile.decoBlockRedSandSlab.name=Red Sand Slab
 tile.decoBlockRedSandStoneStairs.name=Red Sandstone Stairs
-tile.decoBlockRedSandStoneStairsSmooth.name=Cut Red Sandstone Stairs
+tile.decoBlockRedSandStoneSmoothStairs.name=Cut Red Sandstone Stairs
 tile.decoBlockRedSandStoneStairsPolished.name=Polished Red Sandstone Stairs
-tile.decoBlockRedSandStoneStairsBrick.name=Red Sandstone Brick Stairs
+tile.decoBlockRedSandStoneBrickStairs.name=Red Sandstone Brick Stairs
 tile.decoBlockRedSandStoneMossyStairs.name=Mossy Red Sandstone Stairs
 tile.decoBlockRedSandStoneBrickLargeStairs.name=Large Red Sandstone Brick Stairs
 tile.decoBlockRedSandStoneBrickLargeMossyStairs.name=Large Mossy Red Sandstone Brick Stairs
 tile.decoBlockRedSandStoneCrackedStairs.name=Cracked Red Sandstone Stairs
 tile.decoBlockRedSandStoneBrickLargeCrackedStairs.name=Larged Cracked Red Sandstone Stairs
-tile.decoBlockSandStoneStairsSmooth.name=Cut Sandstone Stairs
+tile.decoBlockSandStoneSmoothStairs.name=Cut Sandstone Stairs
 tile.decoBlockSandStoneStairsPolished.name=Polished Sandstone Stairs
-tile.decoBlockSandStoneStairsBrick.name=Sandstone Brick Stairs
+tile.decoBlockSandStoneBrickStairs.name=Sandstone Brick Stairs
 tile.decoBlockSandStoneMossyStairs.name=Mossy Sandstone Stairs
 tile.decoBlockSandStoneBrickLargeStairs.name=Large Sandstone Brick Stairs
 tile.decoBlockSandStoneBrickLargeMossyStairs.name=Large Mossy Sandstone Brick Stairs
@@ -124,8 +124,14 @@ tile.decoBlockButtonSandstone.name=Sandstone Button
 tile.decoBlockButtonRedSandstone.name=Red Sandstone Button
 tile.decoBlockLeavesCherry.name=Cherry Leaves
 tile.decoBlockLeavesAcacia.name=Acacia Leaves
+tile.decoBlockLeavesAutumn.red.name=Red Autumn Leaves
+tile.decoBlockLeavesAutumn.orange.name=Orange Autumn Leaves
+tile.decoBlockLeavesAutumn.yellow.name=Yellow Autumn Leaves
 tile.decoBlockSaplingCherry.name=Cherry Sapling
 tile.decoBlockSaplingAcacia.name=Acacia Sapling
+tile.decoBlockSaplingAutumn.red.name=Red Autumn Sapling
+tile.decoBlockSaplingAutumn.orange.name=Orange Autumn Sapling
+tile.decoBlockSaplingAutumn.yellow.name=Yellow Autumn Sapling
 tile.decoBlockHedgeOakStairs.name=Oak Hedge Stairs
 tile.decoBlockHedgeSpruceStairs.name=Spruce Hedge Stairs
 tile.decoBlockHedgeBirchStairs.name=Birch Hedge Stairs
