@@ -9,6 +9,8 @@ Thanks to Sockthing for the textures for acacia saplings, blood wood doors and t
 - Refactored file prefix to "Deco" rather than "Addon". This, and the below texture name change, were relics from Yhetti's development and have both been changed for clarity.
 - Refactored texture names to make them more consistent, following BTW's naming scheme to use things such as decoBlockXXXX and removing ginger_ as the prefix. This means texture packs will need to update to use the new file names.
 - Added localization support. Included with the addon in the lang folder is the file Deco_en_US.lang, which contains all english translations for the addon. Anyone who wishes to make and distribute translations is free to do so, and I will include it here if you link it.
+- Added acacia trees and accompanying logs and planks. Acacia saplings can be crafted with an oak sapling, fertilizer, and gray dye in a cauldron.
+- Added autumn trees. These trees generate as oak trees with red, orange, or yellow leaves. Autumn saplings can be crafted with an oak sapling, fertilizer, and red, orange, or yellow dye in a cauldron.
 - Added iron trapdoors, crafted with 4 iron ingots and 2 redstone latches, producing 2. They work just like iron doors and will only respond to redstone signals.
 - Added spider eye blocks, created by packing 16 spider eyes together, and spider eye slabs.
 - Added the ability for fertilizer to spawn ferns.
@@ -29,7 +31,7 @@ Thanks to Sockthing for the textures for acacia saplings, blood wood doors and t
 - Changed (decreased) the amount of tall grass which spawns from fertilizer.
 - Changed (increased) the amount of flowers which spawn from fertilizer.
 - Changed the fertilizer recipe to be made in a cauldron, and to use potash instead of dung.
-- Changed the textures of blood wood doors and trapdoors.
+- Changed the textures of blood wood doors and trapdoors as they were previously based on vanilla's acacia textures.
 - Refactored loose slab code to simplify the related code and assimilate it into the main slab code.
 - Removed the ability for animals to eat addon flowers.
 - Removed specific textures for subblocks (except columns). Subblocks will now simply use the texture of their base block. However, MCPatcher will still allow texturepacks to override these textures if texturepack authors wish to do so.
